# CurrencyExchangeRatePredictor

./: $PROFILE.txt  .gitignore  main.py  params.yml  pyproject.toml  readme.md  run_projects.py  train_model.py
models/: arima.py  base_model.py
utils/: utils.py
