[tool.poetry]
name = "currencyexchangeratepredictor"
version = "0.1.0"
description = ""
authors = ["AIEngineerOnDemand <giopantana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13" 
statsmodels = "^0.14.1"
forex-python = "^1.8"
matplotlib = "^3.8.3"
yfinance = "^0.2.37"
python-dotenv = "^1.0.1"
joblib = "^1.3.2"
pyyml = "^0.0.2"
virtualenv = "^20.25.1"
apache-airflow = {extras = ["sqlite"], version = "^2.8.4"}
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
